load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fake.go"],
    importpath = "github.com/coreos/kubecsr/pkg/nodeapprover/cloudprovider/providers/fake",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/golang/mock/gomock:go_default_library"],
)
